--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,2 @@
-[package]
-name = "fzf_oxide"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-memchr = "2.5.0"
-cov-mark = { version = "1.1.0", default-features = false }
-
-[dev-dependencies]
-cov-mark = { version = "1.1.0", default-features = true }
-
+[workspace]
+members = [ "matcher", "worker" ]
