--- a/typos.toml
+++ b/typos.toml
@@ -1,3 +1,3 @@
 default.extend-ignore-re = ["\\\\u\\{[0-9A-Za-z]*\\}"]
 [files]
-extend-exclude = ["src/tests.rs", "*.html"]
+extend-exclude = ["matcher/src/tests.rs", "*.html"]
