--- a/bench/Cargo.toml
+++ b/bench/Cargo.toml
@@ -6,8 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-nucleo-matcher = { version = "0.1", path = "../matcher" }
-nucleo = { version = "0.1", path = "../worker" }
+nucleo = { version = "0.1", path = "../" }
 brunch = "0.5.0"
 fuzzy-matcher = "0.3.7"
 walkdir = "2"
