--- a/matcher/Cargo.toml
+++ b/matcher/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 [dependencies]
 memchr = "2.5.0"
 cov-mark = { version = "1.1.0", default-features = false }
+unicode-segmentation = "1.10"
 
 [dev-dependencies]
 cov-mark = { version = "1.1.0", default-features = true }
