--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,8 @@ jobs:
 
       - name: Run cargo check
         run: cargo check
+      - name: Run cargo check withoult default features
+        run: cargo check --no-default-features
 
   test:
     name: Test
@@ -62,6 +64,8 @@ jobs:
 
       - name: Run cargo clippy
         run: cargo clippy --workspace --all-targets -- -D warnings
+      - name: Run cargo clippy withoult default features
+        run: cargo clippy --workspace --all-targets --no-default-features -- -D warnings
 
       - name: Run cargo doc
         run: cargo doc --no-deps --workspace --document-private-items
