--- a/matcher/Cargo.toml
+++ b/matcher/Cargo.toml
@@ -11,7 +11,13 @@ readme = "../README.md"
 [dependencies]
 memchr = "2.5.0"
 cov-mark = { version = "1.1.0", default-features = false }
-unicode-segmentation = "1.10"
+unicode-segmentation = { version  = "1.10", optional = true }
+
+[features]
+default = ["unicode-normalization", "unicode-casefold", "unicode-segmentation"]
+unicode-normalization = []
+unicode-casefold = []
+unicode-segmentation = ["dep:unicode-segmentation"]
 
 [dev-dependencies]
 cov-mark = { version = "1.1.0", default-features = true }
