--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 license = "MPL-2.0"
 repository = "https://github.com/helix-editor/nucleo"
 readme = "README.md"
+exclude = ["/typos.toml", "/tarpaulin.toml"]
 
 [lib]
 
