--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "nucleo"
 description = "plug and play high performance fuzzy matcher"
-authors = ["Pascal Kuthe <pascal.kuthe@semimod.de>"]
-version = "0.3.0"
+authors = ["Pascal Kuthe <pascalkuthe@pm.me>"]
+version = "0.4.0"
 edition = "2021"
 license = "MPL-2.0"
 repository = "https://github.com/helix-editor/nucleo"
@@ -12,7 +12,7 @@ exclude = ["/typos.toml", "/tarpaulin.toml"]
 [lib]
 
 [dependencies]
-nucleo-matcher = { version = "0.3.0", path = "matcher" }
+nucleo-matcher = { version = "0.3.1", path = "matcher" }
 parking_lot = { version = "0.12.1", features = ["send_guard", "arc_lock"]}
 rayon = "1.7.0"
 
