feat(injector): add an `extend` method to Nucleo's injector

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,16 @@ exclude = ["/typos.toml", "/tarpaulin.toml"]
 
 [dependencies]
 nucleo-matcher = { version = "0.3.1", path = "matcher" }
-parking_lot = { version = "0.12.1", features = ["send_guard", "arc_lock"]}
+parking_lot = { version = "0.12.1", features = ["send_guard", "arc_lock"] }
 rayon = "1.7.0"
 
 [workspace]
-members = [ "matcher", "bench" ]
+members = ["matcher", "bench"]
+
+[dev-dependencies]
+criterion = "0.5.1"
+fakeit = "1.3.0"
+
+[[bench]]
+name = "main"
+harness = false
