--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ target/
 
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
+
+# IDE files and folders
+.idea/
